--- a/N3_GAN_CelebA_final.ipynb
+++ b/N3_GAN_CelebA_final.ipynb
@@ -8,7 +8,12 @@
       "provenance": [],
       "collapsed_sections": [
         "pzIk_n8ZKaL_",
+        "H7dzjjdi826X",
+        "EffqIllQ826X",
+        "162Xn5Ut826j",
+        "AnPwn7lC826t",
         "vHaosi-7ebvp",
+        "XDrmPOFuhp0t",
         "CceRl5Fp827G",
         "4HamjGt0827M"
       ]
@@ -39,7 +44,7 @@
         "id": "pzIk_n8ZKaL_"
       },
       "source": [
-        "# Data Preprocessing and Exploring\n"
+        "# 1 ) Data Preprocessing and Exploring\n"
       ]
     },
     {
@@ -5253,14 +5258,14 @@
         "                    default = \"/content/CelebA/images/attributes_distr.png\",\n",
         "                    help = \"path to save attribute distribution image\") \n",
         "\n",
+        "parser.add_argument('--DATA_PATH',\n",
+        "                    type=str,\n",
+        "                    default = \"/content/CelebA/Img/img_align_celeba\")\n",
+        "\n",
         "parser.add_argument('--IMAGE_SIZE',\n",
         "                    type=int,\n",
         "                    default = 128,\n",
         "                    help = \"size of the image\") \n",
-        "\n",
-        "parser.add_argument('--DATA_PATH',\n",
-        "                    type=str,\n",
-        "                    default = \"/content/CelebA/Img/img_align_celeba\") \n",
         "\n",
         "parser.add_argument('--NUMBER_OF_CLASSES',\n",
         "                    type=int,\n",
@@ -5584,24 +5589,21 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "0wiE_s0lb98V"
+        "id": "vHaosi-7ebvp"
+      },
+      "source": [
+        "# 2) Conditional DCGAN"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XDrmPOFuhp0t",
+        "colab_type": "text"
       },
       "source": [
         "## Loading the Data - conditional GAN\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VSq94CsJH3xz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "X, y = Load_Data(args)"
-      ],
-      "execution_count": 4,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -5634,13 +5636,39 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "colab_type": "text",
-        "id": "vHaosi-7ebvp"
+        "id": "VSq94CsJH3xz",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
-        "# Conditional DCGAN"
+        "X, y = Load_Data(args)"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hek2y1ZthsE-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ABMOYw_bhxYN",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Training"
       ]
     },
     {
@@ -5737,7 +5765,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Visualize model performance"
+        "# 3) Visualize model performance"
       ]
     },
     {
